First working prototype

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,9 @@
 
 [env:megaatmega2560]
 platform = atmelavr
-board = megaatmega2560
+board = uno ;megaatmega2560
 framework = arduino
+monitor_speed = 115200 
 lib_deps =
   MIDI Library
   USB-Host-Shield-20
