--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:megaatmega2560]
 platform = atmelavr
-board = uno ;megaatmega2560
+board = megaatmega2560
 framework = arduino
 monitor_speed = 115200 
 lib_deps =
